# UIML

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TARS_Go电控组编码规范.md  Uiml.cmake
cmake/: UimlUtil.cmake
conf/: CMakeLists.txt  yamlparser.cpp  yamlparser.h
docs/: README.md  StartUsingUIML.md  UIMLConfiguration.md  UIMLDeveloping.md
docs/ObjectOrientedModel/: Motor.md
example/: CopyThisToMainProject.cmake  config_peripheral.c  config_services.h  config_yaml.cpp
inc/: platform.h  strict.h  uimlraii.h
inc/serviceapi/: beepapi.h  managerapi.h  rcapi.h  shooterapi.h
lib/etl/: CMakeLists.txt
services/: CMakeLists.txt
services/beep/: beep.cpp
services/bsp/: bsp_can.c  bsp_exti.c  bsp_spi.c  bsp_tim.c  bsp_usart.c  bsp_usart.cpp
services/chassis/: chassis_mecanum.cpp
services/control/: sys_control.c  sys_control.cpp
services/gimbal/: gimbal.c  gimbal.cpp
services/ins/: README.md  ins.c  ins.cpp
services/ins/bmi088/: bmi088_driver.c
services/judgement/: judge.c  judge_drive.h
services/manager/: manager.cpp
services/rc/: README.md  rc.c
services/referee/: referee.cpp
services/rtt/: rtt.cpp
services/shell/: shell.cpp
services/shell/cmd/: gimbalstate.cpp  pidcmd.cpp  shootercmd.cpp
services/shell/lettershell/: shell.c  shell.h  shell_cfg.h  shell_cmd_list.c  shell_ext.h
services/shoot/: README.md  shoot.c  shoot.cpp
softbus/: CMakeLists.txt  README.md  softbus.c  softbus.h  softbus_cppapi.cpp  softbus_cppapi.h
system/: CMakeLists.txt  config.c  config.h  config_api.c  config_peripheral.c  config_yaml.cpp  crash.cpp  dependency.c  dependency.cpp  dependency.h  entry.c  manager.cpp  manager.h  stubs.cpp  sys_conf.h  yamlparser.cpp  yamlparser.h
test/: CMakeLists.txt  cmsis_os.h  main.cpp  softbustest.cpp  tests.hpp  yamlparsertest.cpp
tools/: CMakeLists.txt
tools/byteorder/: byteorder.c
tools/controller/: pid.cpp
tools/extendio/: extendio.c
tools/first_order_filter/: filter.c
tools/gyroscope/bmi088/: bmi088.cpp  bmi088const.h
tools/hasher/: hasher.c
tools/imu/: imu.cpp
tools/imu/bmi088/: bmi088.cpp
tools/include/: AHRS.h  byteorder.h  extendio.h  gyroscope.h  hasher.h  imu.h  motor.h  my_queue.h  pid.h  slope.h  staticstr.h  uimlnumeric.h  vector.h
tools/include/private/: createfor.h
tools/motor/: README.md  motor.cpp
tools/motor/motor_can/: can_motor.cpp  dji_motor.cpp  dm_j6006.cpp  m2006.c  m2006.cpp  m3508.c  m3508.cpp  m6020.c  m6020.cpp
tools/motor/motor_pwm/: dc_motor.c  dc_motor.cpp  servo.c  servo.cpp
tools/rtt/RTT/: SEGGER_RTT.c  SEGGER_RTT_printf.c
tools/rtt/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
